--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Timothy Jones D. Cabrera</h1>
         <p><em><strong>Station Manager</strong> - Kalibo</em></p>
-        <p>I am a future web developer. I love to watch <a href="http://tv5.espn.com/nba/">basketball</a></p>
+        <p>I am a future web developer. I love to watch <a href="http://tv5.espn.com/nba/">NBA</a></p>
       </td>
     </tr>
   </table>
