--- a/contacts.html
+++ b/contacts.html
@@ -9,10 +9,9 @@
 <body>
   <h2>My Contacts</h2>
   <ul>
-    <li>Office Address: 2nd floor Kings Court Building II 2129 Chino Roces Avenue Makati City, Philippines</li>
     <li>E-mail: tjcabrera@panpacificair.com</li>
     <li>Cel No: +639176372923</li>
-    <li>Office No: +6327508760</li>
+    <li>Mobile No: +639152831970</li>
   </ul>
 
   <hr size"3">
